@@ -8,7 +8,7 @@ For any problem occurred during processing, whether it be caused by the client o
 2.  a RFC 7807 problem detail message
 
 
-.Problem Details JSON schema (from link:schemas/problem/v1/problem-v1.yaml[problem-v1.yaml])
+.Problem Details JSON schema (from link:https://github.com/belgif/openapi-problem/blob/master/src/main/swagger-2.0/problem/v1/problem-v1.yaml[problem-v1.yaml])
 ```yaml
 Problem:
   description: A Problem Details object (RFC 7807)
@@ -146,7 +146,7 @@ WARNING: Links to https://www.gcloud.belgium.be/rest/problems are not resolvable
 
 include::problems/badRequest.adoc[leveloffset=3]
 
-.InvalidParamProblem schema definition (from link:schemas/problem/v1/problem-v1.yaml[problem-v1.yaml])
+.InvalidParamProblem schema definition (from https://github.com/belgif/openapi-problem/blob/master/src/main/swagger-2.0/problem/v1/problem-v1.yaml[problem-v1.yaml])
 ```yaml
 InvalidParamProblem:
   description: Problem details for invalid input parameter(s)
