@@ -16,7 +16,7 @@ CAUTION: For brevity, most URIs in the style guide examples are shortened, but i
 
 All `href` hyperlinks are derived from this minimal link type:
 
-.HttpLink JSON data type (from link:schemas/common/v1/common-v1.yaml[common-v1.yaml])
+.HttpLink JSON data type (from https://github.com/belgif/openapi-common/blob/master/src/main/swagger-2.0/common/v1/common-v1.yaml[common-v1.yaml])
 ```YAML
 HttpLink:
   description: A base type of objects representing links to resources.
@@ -31,7 +31,7 @@ HttpLink:
 
 `self` hyperlinks are derived from the following type:
 
-.SelfLink JSON data type (from link:schemas/common/v1/common-v1.yaml[common-v1.yaml])
+.SelfLink JSON data type (from https://github.com/belgif/openapi-common/blob/master/src/main/swagger-2.0/common/v1/common-v1.yaml[common-v1.yaml])
 ```YAML
 SelfLink:
   description: A base type representing a link to the resource's own location within its representation
@@ -82,7 +82,7 @@ As `website` isn't a reference to another API resource, it is not defined using 
 definitions:
   Company:
     allOf:
-    - "$ref": http://www.gcloud.belgium.be/rest/schemas/common/v1/common-v1.yaml#/definitions/SelfLink
+    - "$ref": "./common/v1/common-v1.yaml#/definitions/SelfLink"
     - type: object
       properties:
         owner:
@@ -92,7 +92,7 @@ definitions:
           format: uri
   PersonReference:
     allOf:
-      - "$ref": http://www.gcloud.belgium.be/rest/schemas/common/v1/common-v1.yaml#/definitions/HttpLink
+      - "$ref": "./common/v1/common-v1.yaml#/definitions/HttpLink"
       - type: object
         properties:
           ssin:
