@@ -56,7 +56,7 @@ An API MAY offer to filter the representation to a single language by using the 
 
 A `LocalizedString` type is defined supporting the three official Belgian languages.
 
-.LocalizedString JSON Schema (from link:schemas/common/v1/common-v1.yaml[common-v1.yaml])
+.LocalizedString JSON Schema (from https://github.com/belgif/openapi-common/blob/master/src/main/swagger-2.0/common/v1/common-v1.yaml[common-v1.yaml])
 ```YAML
 LocalizedString:
   description: A description specified in multiple languages
