@@ -1,93 +1,0 @@
-swagger: "2.0"
-info:
-  title: common technical data types
-  version: 1.0.0
-paths: {}
-parameters:
-  LangQueryParameter:
-    in: query
-    name: lang
-    type: string
-    enum:
-      - fr
-      - nl
-      - de
-  PageQueryParameter:
-    description: Number of requested page in a paged resource collection. Page numbers are 1-based.
-    in: query
-    name: page
-    type: integer
-    minimum: 1
-  SelectQueryParameter:
-    description: Only return selected parts of resource's representation. Parameter value is in BNF-notation.
-    in: query
-    name: select
-    type: string
-definitions:
-  LongRunningTaskStatus:
-    description: status of a long running task
-    type: object
-    properties:
-      state:
-        type: string
-        enum:
-          - processing
-          - failed
-          - done
-      pollAfter:
-        description: hint when to check the status again
-        type: string
-        format: date-time
-      completed:
-        description: when the task has completed (in case state is done or failed)
-        type: string
-        format: date-time
-      problem:
-        $ref: ../../problem/v1/problem-v1.yaml#/definitions/Problem
-    required: [state]
-    example:
-      state: failed
-      completed: 2018-09-13T02:10:00Z
-      problem:
-        instance: "urn:uuid:d9e35127-e9b1-4201-a211-2b52e52508df"
-        title: Bad Request
-        status: 400
-        type: http://example.org/errors/invalidImageFormat
-        detail: Invalid image format
-  HttpLink:
-    description: A base type of objects representing links to resources.
-    type: object
-    properties:
-      href:
-        description: Any absolute URI that is using http or https protocol
-        type: string
-        format: uri
-        readOnly: true
-  LocalizedString:
-    description: A description specified in multiple languages
-    type: object
-    properties:
-      #nl, fr, de are predefined, but additional languages can be added
-      nl:
-        type: string
-      fr:
-        type: string
-      de:
-        type: string
-  MergePatch:
-    description: JSON Merge Patch (RFC 7386) request body
-    type: object
-    # Marker type as JSON Merge Patch requests can not be fully specified as a JSON Schema type
-  SelfLink:
-    description: A base type representing a link to the resource's own location within its representation
-    type: object
-    properties:
-      self:
-        description: Any absolute URI that is using http or https protocol
-        type: string
-        format: uri
-        readOnly: true
-  Uuid:
-    description: Universally Unique Identifier, as standardized in RFC 4122 and ISO/IEC 9834-8
-    type: string
-    pattern: '^[\da-f]{8}-[\da-f]{4}-[\da-f]{4}-[\da-f]{4}-[\da-f]{12}$'
