@@ -1,11 +1,0 @@
-swagger: "2.0"
-info:
-  title: types related to location
-  version: v1
-paths: {}
-definitions:
-  CountryNisCode:
-    description: NIS code representing a country as defined by statbel.fgov.be
-    type: integer
-    minimum: 100
-    maximum: 999
