@@ -1,24 +1,0 @@
-swagger: "2.0"
-info:
-  title: data types for person identifiers
-  version: v1
-paths: {}
-parameters:
-  SsinPathParameter:
-    description: "Social Security Identification Number issued by the National Register or CBSS"
-    in: path
-    name: ssin
-    required: true
-    type: string
-    pattern: '^\d{11}$'
-  SsinQueryParameter:
-    description: "Social Security Identification Number issued by the National Register or CBSS"
-    in: query
-    name: ssin
-    type: string
-    pattern: '^\d{11}$'
-definitions:
-  Ssin:
-    description: "Social Security Identification Number issued by the National Register or CBSS"
-    type: string
-    pattern: '^\d{11}$'
